--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/productPage/product.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/productPage/product.css
@@ -5,10 +5,10 @@
     position: relative;
     cursor: pointer;
     list-style: none;
-    color: #1f1919 !important;
+    color: #999999 !important;
     opacity: 0.5;
     font-size: 14.5px;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .finejwelery:hover {
@@ -16,7 +16,7 @@
 }
 
 .smilingProductMain {
-    width: 100%;
+    width: 84%;
     background-color: white;
 }
 
@@ -31,8 +31,8 @@
 .prod_img {
     /* background-image: url('https://smilingrocks.com/cdn/shop/products/Lab-grown-diamond-white-gold-ring-srr00363wht_11c94dae-c1d2-45e8-ae46-d16152c77f45_800x800.jpg?v=1613627318'); */
     width: 100%;
-    min-height: 412px;
-    height: 412px;
+    min-height: 312px;
+    height: 312px;
     background-size: cover;
     background-position: center;
     transition: all 0.7s ease;
@@ -207,6 +207,7 @@
 }
 
 .cart-icon {
+    display: none;
     position: absolute !important;
     top: 15px;
     left: 10px;
@@ -230,7 +231,8 @@
     }
 
     .filterDivcontainer {
-        display: flex !important;
+        /* display: flex !important; */
+        display: none !important;
 
     }
 }
@@ -367,15 +369,17 @@
 }
 
 .text-container p {
-    font-size: 14px;
+    font-size: 40px;
     text-align: left;
     margin: 0px 0px 0px 40px;
 }
 
 .textContainerData {
-    color: #AF8238;
+    /* color: #AF8238; */
+    color: black;
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    justify-content: center;
 }
 
 .featherImage {
@@ -400,12 +404,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #d4dbe7;
+    /* background-color: #d4dbe7; */
+    background-image: url("https://d-themes.com/wordpress/molla/dummy/wp-content/uploads/sites/2/2020/04/21_shop_list.png");
     z-index: -1;
 }
 
 .filterDivcontainer {
-    display: flex;
+    display: none;
     border: 1px solid #d9d9d9;
     overflow: hidden;
     justify-content: center;
@@ -467,8 +472,19 @@
 .listing-card {
     height: auto;
     background-color: #ffffff;
-    border: 1px solid rgba(0, 0, 0, 0.08);
+    /* border: 1px solid rgba(0, 0, 0, 0.08); */
     overflow: hidden;
+}
+
+.wishlist-icon{
+    visibility: hidden !important;
+}
+
+.listing-card:hover{
+    .wishlist-icon{
+        visibility: visible !important;
+        transition: all 3s;
+    }
 }
 
 
@@ -574,7 +590,7 @@
     justify-content: space-between;
     padding: 0px 10px 0px 10px;
     font-size: 11px;
-    border-top: 1px solid rgba(0, 0, 0, 0.04);
+    /* border-top: 1px solid rgba(0, 0, 0, 0.04); */
     color: #4a5568;
 }
 
@@ -588,14 +604,54 @@
 }
 
 .filtercategoryLable {
-    font-family: "PT Sans", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 13px;
     font-weight: 500px !important;
     text-transform: uppercase;
     letter-spacing: 1.5px;
     line-height: 1.5;
     filter: contrast(10.4);
-    color: #424242;
+    color: #666;
+}
+
+.designCounttext {
+    font-size: 40px !important;
+    font-family: "Poppins", sans-serif;
+    /* font-weight: 500; */
+    /* letter-spacing:1px; */
+    text-transform: capitalize;
+}
+
+.productheader{
+    width:100%;
+}
+.productheader .part{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.sortMenuSelection{
+    border-color: #e4e4e4;
+    padding: 5px;
+    color: #999999;
+    font-size: 11px;
+    font-weight: 400;
+    cursor: pointer;
+    outline: none;
+    /* padding-right: 2px; */
+}
+
+.prodTitle{
+    font-family:"Poppins", sans-serif;
+    color: #333;
+    font-size: 16px;
+}
+
+.from{
+    font-family:"Poppins", sans-serif;
+    color: #333;
+    font-size: 16px;
 }
 
 @media screen and (max-width: 1400px) {
@@ -1222,7 +1278,7 @@
     }
 
     .designCounttext {
-        font-size: 12px !important;
+        font-size: 20px !important; 
     }
 
     .featherImage {
