cart page wishlist page design

--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Header/Header.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Header/Header.css
@@ -200,10 +200,10 @@
     color: black !important;
     background: transparent;
     gap: 50px;
-    border-bottom-left-radius: 8px;
+    /* border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     border-top-left-radius: 0;
-    border-top-right-radius: 0;
+    border-top-right-radius: 0; */
 }
 
 .shop-dropdown {
