--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Header/cartPage/CartPage.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Header/cartPage/CartPage.css
@@ -528,10 +528,11 @@
     height: 140px;
     background-size: cover;
     background-position: center;
-    background-color: #d4dbe7;
+    background-image: url("https://d-themes.com/wordpress/molla/dummy/wp-content/uploads/sites/2/2020/04/21_shop_list.png");
 }
 
 .QTYUpateMain {
+    width: fit-content;
     border: 1px solid lightgray;
     display: flex;
     height: 35px;
@@ -587,6 +588,81 @@
     justify-content: center;
     margin-block: 20px;
     /* margin: 0px 100px 0px 100px; */
+}
+
+.MyCartPageMainDiv {
+    margin-inline: 20%;
+    display: flex;
+}
+
+.myCartMainContainer {
+    width: 70%;
+    margin: 50px 0px 20px 0px;
+}
+
+.CartPagePaymentDiv {
+    width: 30%;
+}
+
+.myCartComponents {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.myCartComponentsNoData {
+    height: 150px;
+    margin-inline: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cartcardPayment {
+    background: #f9f9f9;
+    margin-top: 60px;
+    box-shadow: none !important;
+    border: 1px dashed #d9d9d9 !important;
+    margin-left: 10px;
+    margin-bottom: 30px;
+}
+
+.boder-line {
+    color: #d9d9d9;
+}
+
+.border-lines {
+    color: #c2c2c2;
+}
+
+.card-total {
+    color: #A8807C;
+}
+
+.card-totalspan {
+    color: #A8807C;
+}
+
+.btn-checkout{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.CheckoutBtn{
+    width: 100%;
+    padding: 20px;
+    color: white;
+    background-color: #a8807c;
+    border: none;
+}
+
+.addressLink{
+    color: #c0c0c0;
+    margin: 0px 0px 50px 8px;
+}
+.addinfotext{
+    color: #9e9e9e;
 }
 
 @media screen and (max-width: 18200px) {
@@ -794,12 +870,12 @@
         padding-top: 5px !important;
     }
 
-    .topPlcaeOrderBtn{
-        display: none!important;
+    .topPlcaeOrderBtn {
+        display: none !important;
     }
 
-    .resCon{
-        width: 100%!important;
+    .resCon {
+        width: 100% !important;
     }
 }
 
@@ -819,7 +895,7 @@
     .placeOrderCartPageBtnMobile {
         display: none !important;
     }
-  
+
 
 }
 
@@ -858,8 +934,8 @@
         width: 100% !important;
     }
 
-    .ItemRemarkMain{
-        width: 400px!important;
+    .ItemRemarkMain {
+        width: 400px !important;
     }
 
     .YourCartMainRemkarBoxSingle {
@@ -893,16 +969,16 @@
         font-size: 12px !important;
     }
 
-    .showTotalItemTop{
-        display: none!important;
+    .showTotalItemTop {
+        display: none !important;
     }
 }
 
 @media screen and (max-width: 600px) {
 
-    .smiling-cartPageBoxMain{
-        width: 100%!important;
-    } 
+    .smiling-cartPageBoxMain {
+        width: 100% !important;
+    }
 
     .resCon {
         width: 100% !important;
@@ -953,24 +1029,24 @@
         flex-direction: column;
     }
 
-    .filterDivcontainerCartPage{
-        margin: 10px 0px 0px 0px!important;
+    .filterDivcontainerCartPage {
+        margin: 10px 0px 0px 0px !important;
     }
 
-    .totalPriceTopMain{
-        display: none!important;
+    .totalPriceTopMain {
+        display: none !important;
     }
 }
 
 @media screen and (max-width: 550px) {
 
-    .ItemRemarkMain{
-        width: 300px!important;
+    .ItemRemarkMain {
+        width: 300px !important;
     }
 
-    .prodTitleLine{
-        font-size: 25px!important;
-        margin: 0px!important;
+    .prodTitleLine {
+        font-size: 25px !important;
+        margin: 0px !important;
     }
 }
 
