--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/myWishList/MyWishList.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/myWishList/MyWishList.css
@@ -1,5 +1,6 @@
 .smiling-wishlist {
-    margin-inline: 6%;
+    overflow: auto;
+    margin-inline: 20%;
     background-color: white;
 }
 
@@ -8,7 +9,7 @@
     font-family: 'FreightDispProBook-Regular,Times New Roman,serif';
     font-size: 35px;
     padding-top: 30px;
-    text-align: center;
+    text-align: start;
     width: 100%;
 }
 
@@ -149,7 +150,52 @@
     justify-content: center;
     flex-direction: row;
 }
+.myWishlistMainContainer{
+    width: 100%;
+    margin: 50px 0px 20px 0px;
+}
+.mywislistComponents{
+    /* width: 100%; */
+    margin-inline: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.mywislistComponentsNoData{
+    height: 150px;
+    margin-inline: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.table-borderless th,
+.table-borderless td {
+    border: none !important;
+}
 
+.table-borderless img {
+    max-width: 100%;
+    height: auto;
+}
+
+.mywishlistMainBoxcontainer{
+    width: 100%;
+    height: 300px;
+    min-height: 300px;
+    max-height: fit-content;
+}
+
+.table-custom {
+    color: #7d7f85;
+}
+.table-customThead tr th{
+    color: #7d7f85;
+    font-weight:400px;
+}
+
+.table-custom tbody td{
+    color: #7d7f85;
+}
 
 
 @media screen and (max-width: 1600px) {
