--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/productDetail/proddetail.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/productDetail/proddetail.css
@@ -133,33 +133,39 @@
 
 .product-detail-container {
     display: flex;
-    width: 100%;
+    width: 62.5%;
     max-height: 1009px;
+    gap:10px;
 }
 
 .srprodetail1 {
-    width: 50%
+    width: 60%;
+    display: flex;
+    gap:10px;
+    flex-direction: row-reverse;
 }
 
 .srprodetail2 {
-    width: 50%;
+    width: 40%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 
 .srprodetail2-cont {
-    margin: 50px 150px 0px;
-    width: 50%;
+    /* margin: 50px 150px 0px; */
+    width: 100%;
+    padding-bottom: 30px;
 }
 
 .srthumb_images {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding-left: 50px;
+    /* padding-left: 50px; */
     /* z-index: 1; */
-    top: 200px;
-    position: absolute;
+    /* top: 200px; */
+    /* position: absolute; */
 }
 
 .prodDetailWhitecont {
@@ -167,8 +173,8 @@
 }
 
 .srthumb_images_el {
-    width: 58px;
-    height: 58px;
+    width: 100px;
+    height: 100px;
     border: 1px solid #e1e1e1;
 }
 
@@ -195,47 +201,53 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    /* margin-top:80px; */
+    margin-top:80px;
     /* margin-bottom: -60px;
     margin-top: 7%; */
 }
 
 .smilingProdutDetltTitle {
     text-align: start !important;
-    font-size: 40px;
-    font-family: "PT Sans", sans-serif;
+    font-size: 24px;
+    font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
-    color: #424242;
+    color: #333;
 }
 
 .menuItemTimeEleveDeatil {
-    font-size: 15px;
-    color: rgb(66, 66, 66);
-    font-family: "PT Sans", sans-serif;
+    font-size: 14px;
+    color: #666666;
+    font-family: "Poppins", sans-serif;
+    font-weight: bold;
 }
 
 .menuitemSelectoreMain {
-    border: none;
+    border: 1px solid #d7d7d7;
     outline: none;
-    font-size: 13px;
-    color: rgb(66, 66, 66);
+    font-size: 14px;
+    color: #999;
     font-family: "PT Sans", sans-serif;
-    font-weight: bold;
+    font-weight: 400;
     letter-spacing: 2.2px;
+    width: 210px;
+    padding: 7px 0px;
+    appearance: none;
+    padding-left: 5px;
 }
 
 .mainpriceDeatilPage {
-    font-weight: bold;
-    font-size: 22px;
+    font-weight: 500;
+    font-size: 24px;
     display: flex;
     letter-spacing: 2.2px;
-    font-family: "PT Sans", sans-serif;
+    font-family: "Poppins", sans-serif;
+    color:#a8807c
 }
 
 .addtocartcont {
-    border: 1px solid #d2815f;
-    width: 80%;
+    border: 1px solid #a8807c;
+    width: 50%;
     height: 30%;
     display: flex;
     justify-content: center;
@@ -245,31 +257,53 @@
 }
 
 .addtocartcont:hover {
-    background-color: #d2815f0d;
+    background-color: #a8807c;
+    transition: all 0.5s;
+
+    .addtocarttxt{
+        color:white;
+    }
+    
 }
 
 .addtocarttxt {
-    color: #d2815f;
-    font-family: "PT Sans", sans-serif;
+    color: #a8807c;
+    font-family: "Poppins", sans-serif;
     font-size: 15px;
-    font-weight: bold;
+    font-weight: 400;
     letter-spacing: 1.5px;
     position: relative;
 }
 
 
+
+
+
 .wishlistcont {
-    border: 1px solid #d2815f;
-    width: 20%;
+    /* border: 1px solid #d2815f; */
+    width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0.4%;
+    /* padding: 0.4%; */
     border-radius: 2px;
 }
 
 .wishlistcont:hover {
     background-color: #d2815f0d;
+}
+
+.wishlist_label{
+    font-family:"Poppins", sans-serif;
+    color:#999;
+    font-size:16px;
+}
+
+.wishlist_label:hover{
+    text-decoration: underline;
+    transition: all 1s ;
+    text-underline-offset: 4px;
+    color:#a8807c !important;
 }
 
 .proDeatilList {
@@ -313,13 +347,52 @@
 
 .proDeatilList3.one {
     font-weight: 600;
-
 }
 
 .proDeatilList4.one {
     font-weight: 600;
+}
+
+.part1_key{
+    font-size: 14px;
+    color:#999;
+    font-weight: bold;
 
 }
+
+.part1_value{
+    font-weight:400;
+    letter-spacing: 2px
+}
+
+.breadCrumb_menu{
+    width:1129px;
+    font-size:11.3px;
+    color:#999
+}
+
+.designno_info{
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing:2px;
+    color: #666;
+    font-family:"Poppins", sans-serif;
+}
+
+.cate_info{
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing:2px;
+    color: #666;
+    font-family:"Poppins", sans-serif;
+}
+
+.cate_info:hover{
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    color:#a8807c !important
+}
+
 
 @media screen and (max-width:1731px) {
     .prodDetailWhitecont {
