--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/productPage/product.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/productPage/product.css
@@ -449,6 +449,13 @@
 .main-ProdcutListConatiner {
     font-family: "PT Sans", sans-serif;
     width: 33%;
+    
+}
+
+.main-ProdcutListConatiner:hover{
+    scale: 1;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    transition: all 0.4s ease-out;
 }
 
 .main-ProdcutListConatiner2ImageShow {
@@ -647,6 +654,14 @@
     color: #333;
     font-size: 16px;
 }
+.prodTitle:hover{
+    font-family:"Poppins", sans-serif;
+    color: #c96;
+    font-size: 16px;
+    transition: all 0.3s;
+}
+
+
 
 .from{
     font-family:"Poppins", sans-serif;
