--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/NewArrival/Styles.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/NewArrival/Styles.css
@@ -1,6 +1,15 @@
-.titleNewArrival{
+.titleNewArrival {
     color: #A8807C;
 }
-.newArrivalPdTitle{
+
+.newArrivalPdTitle {
     color: #A8807C;
+}
+
+
+@media screen and (max-width: 768px) {
+    .NewArrMainDiv {
+        margin: 20px 0px 20px 0px !important;
+    }
+
 }
