--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Footer/Footer.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Footer/Footer.css
@@ -100,3 +100,34 @@
     margin-top: 30px;
     font-size: 14px;
 }
+
+
+
+@media screen and (max-width: 400px) {
+    .subScriMainTitle {
+        font-size: 24px;
+    }
+    
+    .FooterLinkMain{
+        display: block;
+    }
+    .FooterLinkMainBox{
+        width: 100%;
+    }
+    .FooterBottomText{
+        text-align: center;
+    }
+    .logoImgFooter{
+        width: 150px;
+    }
+    .footerNewslater{
+        padding-inline: 0% !important;
+    }
+    .footerInputBox{
+        width: 80%;
+    }
+    .instagram-photo{
+        width: 100% !important;
+        height: 100% !important;
+    }
+}
