--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/confirmation/Confirmation.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/confirmation/Confirmation.css
@@ -4,6 +4,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 650px;
+    min-height: 650px;
+    max-height: 800px;
 }
 
 .SmilingthanksImg {
