--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/productPage/product.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/productPage/product.css
@@ -225,6 +225,14 @@
     min-width: 0px;
 }
 
+.breadCrumb_menu_List{
+    width: 1183px;
+    font-size: 12px;
+    color: #999;
+    font-family:"Poppins", sans-serif;
+}
+
+
 @media screen and (min-width: 1440px) {
     .smilingMobileProductListSideBar {
         display: none;
