--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Header/Header.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Header/Header.css
@@ -247,7 +247,7 @@
     color: white !important;
 }
 
-.nav-li-smining:hover {
+/* .nav-li-smining:hover {
     text-decoration-color: #a8807c !important;
     text-decoration: underline;
 }
@@ -260,8 +260,32 @@
 .activeMenu {
     text-decoration: underline;
     text-decoration-color: #a8807c;
-} 
+}  */
 
+.nav-li-sminingSpan {
+    color: white !important;
+    position: relative !important;
+    text-decoration: none !important;
+  }
+  
+  .nav-li-sminingSpan::before {
+    content: '' !important;
+    position: absolute !important;
+    width: 100% !important;
+    height: 1px !important;
+    border-radius: 1px !important;
+    background-color:  #a8807c !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    transform-origin: right !important;
+    transform: scaleX(0) !important;
+    transition: transform .3s ease-in-out !important;
+  }
+  
+  .nav-li-sminingSpan:hover::before {
+    transform-origin: left !important;
+    transform: scaleX(1) !important;
+  }
 
 .nav-li {
     font-weight: 500;
