navbar position chnage done

--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Header/Header.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Header/Header.css
@@ -12,7 +12,15 @@
     top: 0;
     width: 100%;
     z-index: 2147483647 !important;
-    background-color: #000;
+    /* background-color: #000; */
+  }
+
+.fixed_openMenu {
+    position: fixed !important;
+    top: 60px !important;
+    width: 100% !important;
+    z-index: 111111111 !important;
+    /* background-color: #000; */
   }
 
 .smilingCartRemoveBtn {
