--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/myWishList/MyWishList.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/myWishList/MyWishList.css
@@ -43,12 +43,12 @@
 .smiTopAddAllBtn {
     height: 60px;
     width: 150px;
-    color: #7d7f85!important;
+    color: #7d7f85 !important;
     background-color: white;
-    border: 1px solid #7d7f85!important;
+    border: 1px solid #7d7f85 !important;
     font-size: 13px;
     font-weight: 500;
-    margin: 10px!important;
+    margin: 10px !important;
     justify-content: center;
 }
 
@@ -128,6 +128,7 @@
     width: 60%;
     font-family: 'PT Sans', sans-serif;
 }
+
 .smiWishLsitBoxDesc4 {
     font-size: 12px;
     font-weight: 500;
@@ -150,24 +151,28 @@
     justify-content: center;
     flex-direction: row;
 }
-.myWishlistMainContainer{
+
+.myWishlistMainContainer {
     width: 100%;
     margin: 50px 0px 20px 0px;
 }
-.mywislistComponents{
+
+.mywislistComponents {
     /* width: 100%; */
     margin-inline: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* display: flex;
+    justify-content: center; */
+    /* align-items: center; */
 }
-.mywislistComponentsNoData{
+
+.mywislistComponentsNoData {
     height: 150px;
     margin-inline: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .table-borderless th,
 .table-borderless td {
     border: none !important;
@@ -178,7 +183,7 @@
     height: auto;
 }
 
-.mywishlistMainBoxcontainer{
+.mywishlistMainBoxcontainer {
     width: 100%;
     height: 300px;
     min-height: 300px;
@@ -188,21 +193,23 @@
 .table-custom {
     color: #7d7f85;
 }
-.table-customThead tr th{
+
+.table-customThead tr th {
     color: #7d7f85;
-    font-weight:400px;
+    font-weight: 400px;
 }
 
-.table-custom tbody td{
+.table-custom tbody td {
     color: #7d7f85;
 }
 
-
-@media screen and (max-width: 1600px) {
-
-    .smiling-wishlist {
-        margin-inline: 0px !important;
-    }
+.product-title {
+    width: 380px;
+    max-width: 380px;
+    word-wrap: break-word;
+    white-space: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 @media screen and (max-width: 1441px) {
@@ -227,6 +234,21 @@
     }
 }
 
+@media screen and (max-width: 1200px) {
+    .mywislistComponents {
+        margin-inline: 10%;
+    }
+
+    .product-title {
+        width: 300px;
+        max-width: 300px;
+        word-wrap: break-word;
+        white-space: normal;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+
 @media screen and (max-width: 1000px) {
 
     .smiWishLsitBox {
@@ -237,8 +259,21 @@
         margin: 0;
     }
 
-    .mobileFootreCs{
-        top: 50%!important;
+    .mobileFootreCs {
+        top: 50% !important;
+    }
+
+    .mywislistComponents {
+        margin-inline: 6%;
+    }
+
+    .product-title {
+        width: 250px;
+        max-width: 250px;
+        word-wrap: break-word;
+        white-space: normal;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
 
@@ -261,6 +296,27 @@
         margin-block: 10px !important;
     }
 
+    .mywislistComponents {
+        margin-inline: 4%;
+    }
+
+    .product-title {
+        width: 220px;
+        max-width: 220px;
+        word-wrap: break-word;
+        white-space: normal;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .table-customThead{
+        display: none;
+    }
+.table-custom{
+    border: 1px solid #ededed;
+}
 }
 
 @media screen and (max-width: 600px) {
@@ -286,12 +342,12 @@
         object-fit: contain;
     }
 
-    .smiWishLsitBox{
-        width: 47%!important;
+    .smiWishLsitBox {
+        width: 47% !important;
     }
 
-    .mobilkeAddToCartBtn{
-        margin-block: 5px!important;
+    .mobilkeAddToCartBtn {
+        margin-block: 5px !important;
     }
 
     .SmiWishListTitle {
@@ -300,6 +356,13 @@
         font-size: 25px;
         margin-left: 30px;
     }
+
+    .mywislistComponents {
+        width: 100%;
+        margin-inline: 5px;
+    }
+
+  
 
 }
 
