--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/NewArrival/Styles.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/NewArrival/Styles.css
@@ -12,4 +12,11 @@
         margin: 20px 0px 20px 0px !important;
     }
 
+    .NewArrMainDiv{
+        padding: 0px 0px 20px 20px!important;
+    }
+
+    .NewArrivalProductMain{
+        padding: 0px!important;
+    }
 }
