--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/productDetail/proddetail.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/productDetail/proddetail.css
@@ -393,6 +393,13 @@
     color:#a8807c !important
 }
 
+@media screen and (max-width:1001px) {
+    .srprodetail1{
+        display: flex;
+        flex-direction: column;
+    }
+}
+
 
 @media screen and (max-width:1731px) {
     .prodDetailWhitecont {
