--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/productPage/product.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/productPage/product.css
@@ -232,7 +232,6 @@
     font-family:"Poppins", sans-serif;
 }
 
-
 @media screen and (min-width: 1440px) {
     .smilingMobileProductListSideBar {
         display: none;
@@ -644,6 +643,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    gap:7px;
 }
 
 .sortMenuSelection{
@@ -675,6 +676,16 @@
     font-family:"Poppins", sans-serif;
     color: #333;
     font-size: 16px;
+}
+
+.filterMobileDivcontainer{
+  display: none;
+}
+
+@media screen and (max-width: 1190px) {
+    .breadCrumb_menu_List{
+        padding-left: 1%;
+    }
 }
 
 @media screen and (max-width: 1400px) {
@@ -740,6 +751,7 @@
     }
 
     .smilingProductMain {
+        width:100%;
         margin-inline: 0%;
     }
 
@@ -786,7 +798,7 @@
     }
 
     .filterMobileDivcontainer {
-        display: flex;
+        display: none;
         border: 1px solid #d9d9d9;
         border-radius: 5px;
         overflow: hidden;
@@ -921,7 +933,7 @@
     }
 
     .filterMobileDivcontainer {
-        display: flex;
+        display: none;
         border: 1px solid #d9d9d9;
         border-radius: 5px;
         overflow: hidden;
@@ -1019,6 +1031,7 @@
     }
 
     .smilingProductMain {
+        width:100%;
         margin-inline: 0%;
     }
 
@@ -1052,7 +1065,7 @@
     }
 
     .filterMobileDivcontainer {
-        display: flex;
+        display: none;
         border: 1px solid #d9d9d9;
         border-radius: 5px;
         overflow: hidden;
@@ -1175,6 +1188,7 @@
     }
 
     .smilingProductMain {
+        width:100%;
         margin-inline: 0%;
     }
 
@@ -1219,7 +1233,7 @@
     }
 
     .filterMobileDivcontainer {
-        display: flex;
+        display: none;
         border: 1px solid #d9d9d9;
         border-radius: 5px;
         overflow: hidden;
