--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/myWishList/MyWishList.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/myWishList/MyWishList.css
@@ -311,12 +311,13 @@
 }
 
 @media screen and (max-width: 768px) {
-    .table-customThead{
+    .table-customThead {
         display: none;
     }
-.table-custom{
-    border: 1px solid #ededed;
-}
+
+    .table-custom {
+        border: 1px solid #ededed;
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -358,11 +359,57 @@
     }
 
     .mywislistComponents {
-        width: 100%;
         margin-inline: 5px;
     }
 
-  
+
+    /* table */
+
+    .table-custom {
+        width: 100%;
+        border-collapse: collapse;
+      }
+
+      .table-custom thead th {
+        padding: 15px;
+      }
+      .table-responsive{
+        width: 100%;
+      }
+
+      .table-custom tbody tr {
+        display: flex;
+        flex-direction: column; 
+        border-bottom: 1px solid #ede8e8;; 
+      }
+    
+      .table-custom tbody td {
+        padding: 15px;
+        text-align: center;
+        border: none !important;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .imagetextTd{
+        display: block !important;
+      }
+      .product-title{
+        width: 100% !important;
+        text-align: center;
+        max-width: 100% !important;
+      }
+      .product-titleCart{
+        display: block;
+      }
+      .tabletrData{
+        position: relative;
+      }
+      .closeIconWish{
+        position: absolute;
+        top: 5px;
+        right: 5px;
+      }
 
 }
 
@@ -380,5 +427,4 @@
         width: 100% !important;
         margin: 5px 0px !important;
     }
-
 }
