change the design all

--- a/src/ALL-Theme/GORJANA/Pages/Components/ProductList/ProductList.css
+++ b/src/ALL-Theme/GORJANA/Pages/Components/ProductList/ProductList.css
@@ -1,6 +1,6 @@
 .gj_pagetitle{
     font-size: 45px;
-    font-family: 'FreightDisp Pro Medium';
+    font-family: "Poppins", sans-serif;
     color: #283045;
 }
 
@@ -26,7 +26,7 @@
 .gj_pcl_title{
     margin-top: 12px;
     font-size: 18px;
-    font-family: 'FreightDisp Pro Medium';
+    font-family: "Poppins", sans-serif;
     color: #283045;
 }
 
