--- a/src/ALL-Theme/GORJANA/Pages/Components/home/VisitAs/VisitAs.css
+++ b/src/ALL-Theme/GORJANA/Pages/Components/home/VisitAs/VisitAs.css
@@ -20,8 +20,7 @@
 
 .gorTopVisiteDetailTitle {
     font-size: 22px;
-    font-family: 'Freight Big Pro,serif';
-}
+font-family: "Poppins", sans-serif;}
 
 .gorTopVisiteDetailDesc {
     font-size: 13px;
