--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/account/address/ManageAddress.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/account/address/ManageAddress.css
@@ -1,6 +1,6 @@
 .muiSmilingRocksBtnManage{
     /* border: 1px solid #7d7f85 !important; */
-    font-family: "PT Sans", sans-serif !important;
+    font-family: "Poppins", sans-serif !important;
     font-size: 13.5px !important;
     font-weight: 600 !important;
     opacity: .8 !important;
@@ -19,7 +19,7 @@
 
 .muiSmilingRocksBtnManageEdit{
     /* border: 1px solid #7d7f85 !important; */
-    font-family: "PT Sans", sans-serif !important;
+    font-family: "Poppins", sans-serif !important;
     font-size: 13.5px !important;
     font-weight: 700 !important;
     opacity: .8 !important;
