--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/CountDownTimer/Styles.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/CountDownTimer/Styles.css
@@ -1,5 +1,5 @@
 .Timercontainer {
-    font-family: "PT Sans", sans-serif !important;
+    font-family: "Poppins", sans-serif !important;
     margin-top: -6px;
     width: 100%;
     background: rgb(205, 209, 217);
