--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/index.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/index.css
@@ -1,7 +1,7 @@
 .homeMain{
     /* margin-inline: 6%; */
     background-color: white;
-    font-family: "PT Sans", sans-serif !important;
+    font-family: "Poppins", sans-serif !important;
 }
 .smining-header{
     height: 110px;
