--- a/src/ALL-Theme/GORJANA/Pages/Components/AuthSection/SignIn.css
+++ b/src/ALL-Theme/GORJANA/Pages/Components/AuthSection/SignIn.css
@@ -15,8 +15,7 @@
     font-size: 50px;
     margin: 0px;
     color: #283045;
-    font-family: 'Freight Big Pro,serif';
-}
+font-family: "Poppins", sans-serif;}
 .gorEmailInputBox{
     height: 50px;
     width: 90%;
