--- a/src/ALL-Theme/GORJANA/Pages/Components/Explore/MonthoHoroscope/MontholyHoroscope.css
+++ b/src/ALL-Theme/GORJANA/Pages/Components/Explore/MonthoHoroscope/MontholyHoroscope.css
@@ -6,8 +6,7 @@
 .gotHoroMainTitle{
     font-size: 60px;
     text-align: center;
-    font-family: 'Freight Big Pro,serif';
-    margin: 0px;
+font-family: "Poppins", sans-serif;    margin: 0px;
 }
 
 .gorHoroScopeBoxMain{
