--- a/src/ALL-Theme/GORJANA/Pages/Components/FAQ/FAQ.css
+++ b/src/ALL-Theme/GORJANA/Pages/Components/FAQ/FAQ.css
@@ -20,8 +20,7 @@
 }
 
 .gorBoxfaqTitle {
-    font-family: 'Freight Big Pro,serif';
-    font-weight: 300;
+font-family: "Poppins", sans-serif;    font-weight: 300;
     font-size: 30px;
 }
 
