--- a/src/ALL-Theme/GORJANA/Pages/Components/home/Favorites/Favorites.css
+++ b/src/ALL-Theme/GORJANA/Pages/Components/home/Favorites/Favorites.css
@@ -1,78 +1,85 @@
-.gorjanaFave1web{
+.gorjanaFave1web {
     padding-top: 80px;
     cursor: pointer;
     position: relative;
 }
-.gorjanaFaveImage{
+
+.gorjanaFaveImage {
     width: 100%;
 }
-.gorjanaFaveBox{
+
+.gorjanaFaveBox {
     position: absolute;
     top: 40%;
     right: 14%;
 }
 
-.gorjanaFavBoxLink{
+.gorjanaFavBoxLink {
     font-size: 19px;
     color: white;
     display: flex;
     justify-content: flex-end;
     margin-top: -15px;
-    font-family: 'Freight Big Pro,serif';
+    font-family: "Poppins", sans-serif;
     text-decoration: underline;
 }
 
-.gorjanaFave2web{
+.gorjanaFave2web {
     padding-top: 45px;
     cursor: pointer;
     position: relative;
 }
 
-.gorjanaFaveBox2{
+.gorjanaFaveBox2 {
     position: absolute;
     top: 40%;
     left: 15%;
 }
-.gorjanaFavBoxLink2{
+
+.gorjanaFavBoxLink2 {
     font-size: 19px;
     color: white;
-    font-family: 'Freight Big Pro,serif';
+    font-family: "Poppins", sans-serif;
     text-decoration: underline;
 }
 
 
-.gorjanaFaveBoxMobile{
+.gorjanaFaveBoxMobile {
     position: absolute;
     top: 60%;
     text-align: center;
     width: 100%;
 }
-.gorjanaFavBoxLinkMobile{
+
+.gorjanaFavBoxLinkMobile {
     font-size: 19px;
     color: white;
     margin-top: -15px;
-    font-family: 'Freight Big Pro,serif';
+    font-family: "Poppins", sans-serif;
     text-decoration: underline;
 }
 
-.gorjanaFaveBox2Mobile{
+.gorjanaFaveBox2Mobile {
     position: absolute;
     bottom: 20%;
     width: 100%;
 }
-.gorjanaFavBoxLink2Mobile{
+
+.gorjanaFavBoxLink2Mobile {
     font-size: 19px;
     color: white;
     margin-top: -15px;
-    font-family: 'Freight Big Pro,serif';
+    font-family: "Poppins", sans-serif;
     text-decoration: underline;
     text-align: center;
-} 
+}
+
 @media screen and (min-width:751px) {
     .gorjanaFave1Mobile {
         display: none;
     }
-    .gorjanaFave2Mobile{
+
+    .gorjanaFave2Mobile {
         display: none;
     }
 }
@@ -82,24 +89,25 @@
     .gorjanaFave1web {
         display: none;
     }
-    .gorjanaFave2web{
+
+    .gorjanaFave2web {
         display: none;
     }
 
 
-    .gorjanaFave1Mobile{
+    .gorjanaFave1Mobile {
         padding-top: 110px;
         cursor: pointer;
         position: relative;
     }
 
-    .gorjanaFave2Mobile{
+    .gorjanaFave2Mobile {
         padding-top: 60px;
         cursor: pointer;
         position: relative;
     }
 
-    .gorjanaFaveImageMobile{
-            width: 100%;
+    .gorjanaFaveImageMobile {
+        width: 100%;
     }
 }
