--- a/src/ALL-Theme/GORJANA/Pages/Components/home/FeaturedCollection/FeatureColl.css
+++ b/src/ALL-Theme/GORJANA/Pages/Components/home/FeaturedCollection/FeatureColl.css
@@ -8,8 +8,7 @@
     line-height: 1.25;
     margin: 0px;
     font-weight: 300;
-    font-family: 'Freight Big Pro,serif';
-}
+font-family: "Poppins", sans-serif;}
 .gorFetureBox1 {
     width: 45%;
     margin-top: 13%;
@@ -33,8 +32,7 @@
     font-size: 22px;
     font-weight: 300;
     line-height: 1.25;
-    font-family: 'Freight Big Pro,serif';
-}
+font-family: "Poppins", sans-serif;}
 
 .gorFetureBox1Sub{
     margin-top: 60px;
@@ -98,8 +96,7 @@
     .gorFutureMainTitleMobile {
         font-size: 31px;
         font-weight: 300;
-        font-family: 'Freight Big Pro,serif';
-        line-height: 1.25px;
+    font-family: "Poppins", sans-serif;        line-height: 1.25px;
         margin: 30px;
     }
 
