--- a/src/ALL-Theme/GORJANA/Pages/Components/home/instagram/InstaSection.css
+++ b/src/ALL-Theme/GORJANA/Pages/Components/home/instagram/InstaSection.css
@@ -22,8 +22,7 @@
     font-size: 30px;
     padding-inline: 15%;
     margin: 0px;
-    font-family: 'Freight Big Pro,serif';
-}
+font-family: "Poppins", sans-serif;}
 .gorInstaIconeMain{
     position: absolute;
     right: 25px;
