--- a/src/ALL-Theme/GORJANA/Pages/Components/home/masonrySection/Masonry.css
+++ b/src/ALL-Theme/GORJANA/Pages/Components/home/masonrySection/Masonry.css
@@ -6,8 +6,7 @@
 .gorMasonryMainTitle {
     margin-top: 90px;
     font-size: 35px;
-    font-family: 'Freight Big Pro,serif';
-    margin-inline: 15%;
+font-family: "Poppins", sans-serif;    margin-inline: 15%;
     margin-bottom: 0px;
 }
 
