--- a/src/ALL-Theme/GORJANA/Pages/Components/storeLocatore/StoreLocatore.css
+++ b/src/ALL-Theme/GORJANA/Pages/Components/storeLocatore/StoreLocatore.css
@@ -5,8 +5,7 @@
 
 .gorStoreMainTitle {
     font-size: 45px;
-    font-family: 'Freight Big Pro,serif';
-}
+font-family: "Poppins", sans-serif;}
 
 .gorStoreTopSection {
     display: flex;
