--- a/src/ALL-Theme/ORNAZ/Pages/Components/footer/allaboutornaz/ReferFriends/Friend.css
+++ b/src/ALL-Theme/ORNAZ/Pages/Components/footer/allaboutornaz/ReferFriends/Friend.css
@@ -20,12 +20,10 @@
     font-size: 18px;
     font-weight: 600;
     color: #333333;
-    font-family: lato, sans-serif;
-}
+font-family: "Poppins", sans-serif;}
 
 .fri_table {
-    font-family: lato, sans-serif;
-    border-collapse: collapse;
+font-family: "Poppins", sans-serif;    border-collapse: collapse;
     width: 100%;
     max-width: 800px;
     margin: 25px 0;
