--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/FAQ/FAQ.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/FAQ/FAQ.css
@@ -15,7 +15,7 @@
 
 .smiling-FaqMainSubTitle {
     color: #7d7f85;
-    font-family: 'TTCommons-Regular,Helvetica,sans-serif';
+    font-family: "Poppins", sans-serif;;
     font-size: 25px;
 }
 
