--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/account/changePassword/ChangePassword.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/account/changePassword/ChangePassword.css
@@ -18,7 +18,7 @@
     font-weight: 600 !important;
     letter-spacing: 1px;
     transition: all 0.5s ease;
-    font-family: "PT Sans", sans-serif;
+    font-family: "Poppins", sans-serif;
     cursor: pointer;
     background-color: white;
 }
