--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/account/yourProfile/YourProfile.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/account/yourProfile/YourProfile.css
@@ -9,7 +9,7 @@
 .SmilingAddEditAddrwess {
     height: 40px;
     width: 160px;
-    font-family: "PT Sans", sans-serif !important;
+    font-family: "Poppins", sans-serif !important;
     font-weight: 700 !important;
     opacity: .9;
     background: #f6efe6 !important;
