--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/delivery/Delivery.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/delivery/Delivery.css
@@ -37,7 +37,7 @@
 
 .addressData {
     margin: 0px;
-    font-family: "PT Sans", sans-serif;
+    font-family: "Poppins", sans-serif;
     color: rgb(125, 127, 133);
     text-transform: capitalize;
     font-size: 14px;
@@ -119,7 +119,7 @@
     border: none;
     background: #f6efe6;
     color: rgba(31, 25, 25, 0.7);
-    font-family: "PT Sans", sans-serif !important;
+    font-family: "Poppins", sans-serif !important;
     font-weight: 600;
     opacity: .8;
     margin-inline: 5px;
@@ -139,7 +139,7 @@
     background: #f6efe6;
     color: rgba(31, 25, 25, 0.7);
     opacity: .8;
-    font-family: "PT Sans", sans-serif !important;
+    font-family: "Poppins", sans-serif !important;
     font-weight: 600;
     padding: 6px 10px 6px 10px;
     border-radius: 5px;
