--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/FestiveFind/FestiveFinds.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/FestiveFind/FestiveFinds.css
@@ -113,7 +113,7 @@
     margin: 0px;
     font-weight: 300;
     line-height: 1.25;
-    font-family: "PT Sans", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 .gorViewLookBookimg {
