--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Header/cartPage/CartPage.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Header/cartPage/CartPage.css
@@ -749,7 +749,7 @@
         font-size: 13px;
         cursor: pointer;
         font-weight: 500;
-        font-family: 'PT Sans', sans-serif;
+        font-family: "Poppins", sans-serif;
         margin: 10px;
     }
 
