--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/shopByCategory/ShopByCategory.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/shopByCategory/ShopByCategory.css
@@ -1,7 +1,7 @@
 
 
 .shopbycategoryTitle{
-    font-family: 'FreightDispProMedium-Regular,Times New Roman,serif';
+    font-family: "Poppins", sans-serif;
     font-size: 40px;
     text-align: center;
     color: rgb(125, 127, 133);
