--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/shopOurInstagram/ShopOurInstagram.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/shopOurInstagram/ShopOurInstagram.css
@@ -9,7 +9,7 @@
 
 .shopinstaMainTitle {
     font-size: 30px;
-    font-family: 'FreightDispProMedium-Regular,Times New Roman,serif';
+    font-family: "Poppins", sans-serif;
     color: #7d7f85;
     text-align: center;
 }
