--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/shopifySection/shopifySection.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/shopifySection/shopifySection.css
@@ -23,7 +23,7 @@
     color: #7d7f85;
     font-size: 30px;
     text-align: center;
-    font-family: 'FreightDispProMedium-Regular,Times New Roman,serif';
+    font-family: "Poppins", sans-serif;
 }
 .shopifyDescription{
     width: 70%;
