--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/smiling_Rock/SmilingRock.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/smiling_Rock/SmilingRock.css
@@ -21,7 +21,7 @@
     font-size: 25px;
     margin-bottom: 50px;
     color: #7d7f85;
-    font-family: 'FreightDispProMedium-Regular,Times New Roman,serif';
+    font-family: "Poppins", sans-serif;
 }
 
 .smilingBoxName {
