--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/myWishList/MyWishList.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/myWishList/MyWishList.css
@@ -84,7 +84,7 @@
     font-weight: 500;
     color: #212529;
     text-align: center;
-    font-family: 'PT Sans', sans-serif;
+    font-family: "Poppins", sans-serif;
 
 }
 
@@ -94,7 +94,7 @@
     color: #212529;
     text-align: center;
     margin: 0px;
-    font-family: 'PT Sans', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 .smiWishLsitBoxTitltLine {
@@ -104,7 +104,7 @@
     margin: 0px;
     opacity: 0.7;
     text-transform: uppercase;
-    font-family: 'PT Sans', sans-serif;
+    font-family: "Poppins", sans-serif;
 
 }
 
@@ -126,7 +126,7 @@
     border: 1px solid black;
     height: 30px;
     width: 60%;
-    font-family: 'PT Sans', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 .smiWishLsitBoxDesc4 {
@@ -136,7 +136,7 @@
     border: 1px solid;
     height: 30px;
     width: 60%;
-    font-family: 'PT Sans', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 .smiWishLsitBoxDescPrice {
@@ -145,7 +145,7 @@
     color: #212529;
     margin: 0px;
     text-align: center;
-    font-family: 'PT Sans', sans-serif;
+    font-family: "Poppins", sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
