--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/productDetail/proddetail.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/productDetail/proddetail.css
@@ -227,7 +227,7 @@
     outline: none;
     font-size: 14px;
     color: #999;
-    font-family: "PT Sans", sans-serif;
+    font-family: "Poppins", sans-serif;
     font-weight: 400;
     letter-spacing: 2.2px;
     width: 210px;
@@ -588,7 +588,7 @@
 
     .menuitemSelectoreMain {
         font-size: 11px !important;
-        font-family: "PT Sans", sans-serif !important;
+        font-family: "Poppins", sans-serif !important;
         letter-spacing: 0px !important;
     }
 }
