--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/NewArrival/Styles.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/NewArrival/Styles.css
@@ -2,6 +2,8 @@
     color: #A8807C;
     font-family: "Rosarivo", Sans-serif;
     text-decoration: uppercase!important;
+    font-size: 30px;
+    font-weight: 600;
 }
 
 .newArrivalPdTitle {
