--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/productDetail/proddetail.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/productDetail/proddetail.css
@@ -212,6 +212,7 @@
     font-family: "Poppins", sans-serif;
     font-weight: 400;
     font-style: normal;
+    margin: 0px;
     color: #333;
 }
 
@@ -237,8 +238,7 @@
 }
 
 .mainpriceDeatilPage {
-    font-weight: 500;
-    font-size: 24px;
+    font-size: 23px;
     display: flex;
     letter-spacing: 2.2px;
     font-family: "Poppins", sans-serif;
