--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Widgets/style.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Widgets/style.css
@@ -29,7 +29,15 @@
     justify-content: center;
     align-items: center;
     margin: auto;
-    margin-top: 50px;
+    /* margin-top: 50px; */
+}
+
+.followInsTitle{
+  font-size: 2rem;
+  font-family: "Playfair Display", Sans-serif;
+  font-weight: 500;
+  text-align: center;
+  margin: 100px 0px 0px 0px;
 }
 
   .instagram-gallery {
