Image use through ufcc

--- a/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Header/cartPage/CartPage.css
+++ b/src/ALL-Theme/SMININGROCKS/Pages/Components/home/Header/cartPage/CartPage.css
@@ -529,7 +529,7 @@
     height: 140px;
     background-size: cover;
     background-position: center;
-    background-image: url("https://d-themes.com/wordpress/molla/dummy/wp-content/uploads/sites/2/2020/04/21_shop_list.png");
+    /* background-image: url("https://d-themes.com/wordpress/molla/dummy/wp-content/uploads/sites/2/2020/04/21_shop_list.png"); */
 }
 
 .QTYUpateMain {
